Actions
Bug #13228
closedenvd: this 'if' clause does not guard...
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors on sparc:
piclenvsetup.c: In function 'add_sensor_nodes_and_props': piclenvsetup.c:404:3: error: this 'if' clause does not guard... [-Werror=misleading-indentation] if (env_debug) ^~ piclenvsetup.c:407:4: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if' continue; ^~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit ab1c26a6b072b5f88b50bd1182266a249664df5b
commit ab1c26a6b072b5f88b50bd1182266a249664df5b Author: Toomas Soome <tsoome@me.com> Date: 2020-11-10T19:36:38.000Z 13228 envd: this 'if' clause does not guard... Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions