13228 envd: this 'if' clause does not guard... Reviewed by: Robert Mustacchi <rm@fingolfin.org> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>